# comfyui-image-judge

./: .gitignore  LICENSE  README.md  __init__.py  core.py  nodes.py  pyproject.toml
tests/: test_core.py
web/: imagejudge.js  index.html
